--- a/test.html
+++ b/test.html
@@ -5,9 +5,18 @@
   <title>SystemJS-CoffeeScript plugin test</title>
   <script src="jspm_packages/system.js"></script>
   <script src="config.js"></script>
-  <script src="test.js"></script>
+  <script>
+    System.import('./test.coffee!')
+      .then(function (test) {
+        var t = new test('Test');
+        document.body.append(t.message(3));
+      })
+      .catch(function (err) {
+        console.log('ERROR: ', err);
+      });
+  </script>
 </head>
 <body>
-  Wait for it... 
+  Wait for it (not working yet)... 
 </body>
 </html>
