--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
     System.import('./test.coffee!')
       .then(function (test) {
         var t = new test('Test');
-        document.body.append(t.message(3));
+        document.body.append(t.go(3));
       })
       .catch(function (err) {
         console.log('ERROR: ', err);
