working with window.CoffeeScript, jspm/npm#37

--- a/test.html
+++ b/test.html
@@ -5,11 +5,13 @@
   <title>SystemJS-CoffeeScript plugin test</title>
   <script src="jspm_packages/system.js"></script>
   <script src="config.js"></script>
+  <!-- Ideally, this would be a proper jspm dependency. -->
+  <script src="http://coffeescript.org/extras/coffee-script.js"></script>
   <script>
     System.import('./test.coffee!')
       .then(function (test) {
         var t = new test('Test');
-        document.body.append(t.go(3));
+        document.body.innerHTML += t.go(3);
       })
       .catch(function (err) {
         console.log('ERROR: ', err);
@@ -17,6 +19,6 @@
   </script>
 </head>
 <body>
-  Wait for it (not working yet)... 
+  Wait for it... 
 </body>
 </html>
