try using npm:coffee-script #2

--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>SystemJS-CoffeeScript plugin test</title>
   <script src="jspm_packages/system.js"></script>
+  <script src="./config.js"></script>
   <script>
     System.import('./test.coffee!')
       .then(function (test) {
